// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates HPA with expected spec, when metrics, scaleUp, and scaleDown are all configured 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-deployment-c898c72d",
    },
    "spec": Object {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "image": "pod",
              "imagePullPolicy": "Always",
              "name": "main",
              "resources": Object {
                "limits": Object {
                  "cpu": "1500m",
                  "memory": "2048Mi",
                },
                "requests": Object {
                  "cpu": "1000m",
                  "memory": "512Mi",
                },
              },
              "securityContext": Object {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": true,
                "runAsGroup": 26000,
                "runAsNonRoot": true,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "restartPolicy": "Always",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "setHostnameAsFQDN": false,
        },
      },
    },
  },
  Object {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": Object {
      "name": "test-hpa-c8e6eb3e",
    },
    "spec": Object {
      "behavior": Object {
        "scaleDown": Object {
          "policies": Array [
            Object {
              "periodSeconds": 180,
              "type": "Pods",
              "value": 3,
            },
            Object {
              "periodSeconds": 15,
              "type": "Percent",
              "value": 30,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 300,
        },
        "scaleUp": Object {
          "policies": Array [
            Object {
              "periodSeconds": 180,
              "type": "Pods",
              "value": 3,
            },
            Object {
              "periodSeconds": 15,
              "type": "Percent",
              "value": 30,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 300,
        },
      },
      "maxReplicas": 10,
      "metrics": Array [
        Object {
          "resource": Object {
            "name": "cpu",
            "target": Object {
              "averageUtilization": 50,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
      ],
      "minReplicas": 2,
      "scaleTargetRef": Object {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "test-deployment-c898c72d",
      },
    },
  },
]
`;

exports[`creates HPA, when metrics are not provided and one of the two target containers does not have any resources limits/requests 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-deployment-c898c72d",
    },
    "spec": Object {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "image": "pod1",
              "imagePullPolicy": "Always",
              "name": "main",
              "securityContext": Object {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": true,
                "runAsGroup": 26000,
                "runAsNonRoot": true,
                "runAsUser": 25000,
              },
            },
            Object {
              "image": "pod2",
              "imagePullPolicy": "Always",
              "name": "main",
              "resources": Object {
                "requests": Object {
                  "cpu": "256m",
                },
              },
              "securityContext": Object {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": true,
                "runAsGroup": 26000,
                "runAsNonRoot": true,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "restartPolicy": "Always",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "setHostnameAsFQDN": false,
        },
      },
    },
  },
  Object {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": Object {
      "name": "test-hpa-c8e6eb3e",
    },
    "spec": Object {
      "behavior": Object {
        "scaleDown": Object {
          "policies": Array [
            Object {
              "periodSeconds": 300,
              "type": "Pods",
              "value": 1,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 300,
        },
        "scaleUp": Object {
          "policies": Array [
            Object {
              "periodSeconds": 60,
              "type": "Pods",
              "value": 4,
            },
            Object {
              "periodSeconds": 60,
              "type": "Percent",
              "value": 200,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 0,
        },
      },
      "maxReplicas": 10,
      "minReplicas": 1,
      "scaleTargetRef": Object {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "test-deployment-c898c72d",
      },
    },
  },
]
`;

exports[`creates HPA, when minReplicas is same as maxReplicas 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-deployment-c898c72d",
    },
    "spec": Object {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "image": "pod",
              "imagePullPolicy": "Always",
              "name": "main",
              "resources": Object {
                "limits": Object {
                  "cpu": "1500m",
                  "memory": "2048Mi",
                },
                "requests": Object {
                  "cpu": "1000m",
                  "memory": "512Mi",
                },
              },
              "securityContext": Object {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": true,
                "runAsGroup": 26000,
                "runAsNonRoot": true,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "restartPolicy": "Always",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "setHostnameAsFQDN": false,
        },
      },
    },
  },
  Object {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": Object {
      "name": "test-hpa-c8e6eb3e",
    },
    "spec": Object {
      "behavior": Object {
        "scaleDown": Object {
          "policies": Array [
            Object {
              "periodSeconds": 300,
              "type": "Pods",
              "value": 1,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 300,
        },
        "scaleUp": Object {
          "policies": Array [
            Object {
              "periodSeconds": 60,
              "type": "Pods",
              "value": 4,
            },
            Object {
              "periodSeconds": 60,
              "type": "Percent",
              "value": 200,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 0,
        },
      },
      "maxReplicas": 10,
      "minReplicas": 10,
      "scaleTargetRef": Object {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "test-deployment-c898c72d",
      },
    },
  },
]
`;

exports[`creates HPA, when target is a StatefulSet 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "test-testservice-c876eb6f",
    },
    "spec": Object {
      "externalIPs": Array [],
      "ports": Array [
        Object {
          "port": 80,
        },
      ],
      "selector": Object {
        "cdk8s.io/metadata.addr": "test-StatefulSet-c809b559",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": Object {
      "name": "test-statefulset-c8a6ec86",
    },
    "spec": Object {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 1,
      "selector": Object {},
      "serviceName": "test-testservice-c876eb6f",
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-StatefulSet-c809b559",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "image": "foobar",
              "imagePullPolicy": "Always",
              "name": "main",
              "resources": Object {
                "limits": Object {
                  "cpu": "1500m",
                  "memory": "2048Mi",
                },
                "requests": Object {
                  "cpu": "1000m",
                  "memory": "512Mi",
                },
              },
              "securityContext": Object {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": true,
                "runAsGroup": 26000,
                "runAsNonRoot": true,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "restartPolicy": "Always",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "setHostnameAsFQDN": false,
        },
      },
      "updateStrategy": Object {
        "rollingUpdate": Object {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  Object {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": Object {
      "name": "test-hpa-c8e6eb3e",
    },
    "spec": Object {
      "behavior": Object {
        "scaleDown": Object {
          "policies": Array [
            Object {
              "periodSeconds": 300,
              "type": "Pods",
              "value": 1,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 300,
        },
        "scaleUp": Object {
          "policies": Array [
            Object {
              "periodSeconds": 60,
              "type": "Pods",
              "value": 4,
            },
            Object {
              "periodSeconds": 60,
              "type": "Percent",
              "value": 200,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 0,
        },
      },
      "maxReplicas": 10,
      "minReplicas": 1,
      "scaleTargetRef": Object {
        "apiVersion": "apps/v1",
        "kind": "StatefulSet",
        "name": "test-statefulset-c8a6ec86",
      },
    },
  },
]
`;

exports[`creates HPA, when target is a deployment 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-deployment-c898c72d",
    },
    "spec": Object {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-Deployment-c83f5e59",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "image": "pod",
              "imagePullPolicy": "Always",
              "name": "main",
              "resources": Object {
                "limits": Object {
                  "cpu": "1500m",
                  "memory": "2048Mi",
                },
                "requests": Object {
                  "cpu": "1000m",
                  "memory": "512Mi",
                },
              },
              "securityContext": Object {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": true,
                "runAsGroup": 26000,
                "runAsNonRoot": true,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "restartPolicy": "Always",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "setHostnameAsFQDN": false,
        },
      },
    },
  },
  Object {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": Object {
      "name": "test-hpa-c8e6eb3e",
    },
    "spec": Object {
      "behavior": Object {
        "scaleDown": Object {
          "policies": Array [
            Object {
              "periodSeconds": 300,
              "type": "Pods",
              "value": 1,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 300,
        },
        "scaleUp": Object {
          "policies": Array [
            Object {
              "periodSeconds": 60,
              "type": "Pods",
              "value": 4,
            },
            Object {
              "periodSeconds": 60,
              "type": "Percent",
              "value": 200,
            },
          ],
          "selectPolicy": "Max",
          "stabilizationWindowSeconds": 0,
        },
      },
      "maxReplicas": 10,
      "minReplicas": 1,
      "scaleTargetRef": Object {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "test-deployment-c898c72d",
      },
    },
  },
]
`;
